k8s/openwebui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: ai-lab
  labels:
    app: openwebui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: openwebui
